--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
     <div class="container">
         <div class="text">
             <h2>1 dolgok, linkek</h2>
-            <p>Kattints a <a href="https://docs.google.com/document/d/14-u1yTf1qR8xAHJlF_laWFqk0q4ss-AIkc7Ut9g_FpQ/edit?usp=sharing" target="_blank">ez itt az első-m</a>!</p>
+            <p>Kattints a <a href=https://docs.google.com/document/d/14-u1yTf1qR8xAHJlF_laWFqk0q4ss-AIkc7Ut9g_FpQ/edit?usp=sharing target="_blank">ez itt az első-m</a>!</p>
             <p>sider chatgpt bővítmény!!</p>
             <p>kvipy666 - AsukaLangley6 </p>
             <p>Suspendisse potenti. Cras tempor pharetra feugiat.</p>
